--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "cookies-next": "^5.1.0",
+    "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
