--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "net": "^1.0.2",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
