--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.0.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
