--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/stompjs": "^2.3.9",
     "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.1",
     "html5-qrcode": "^2.3.8",
     "net": "^1.0.2",
     "next": "15.3.1",
