--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html5-qrcode": "^2.3.8",
     "net": "^1.0.2",
     "next": "15.3.1",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
