--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^13.0.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
